rancher/base/deployment.yaml
---
# Source: rancher/templates/deployment.yaml
kind: Deployment
apiVersion: apps/v1
metadata:
  name: rancher
  labels:
    app: rancher
spec:
  replicas: 3
  selector:
    matchLabels:
      app: rancher
  strategy:
    rollingUpdate:
      maxSurge: 1
      maxUnavailable: 1
    type: RollingUpdate
  template:
    metadata:
      labels:
        app: rancher
    spec:
      serviceAccountName: rancher
      affinity:
        podAntiAffinity:
          preferredDuringSchedulingIgnoredDuringExecution:
            - weight: 100
              podAffinityTerm:
                labelSelector:
                  matchExpressions:
                    - key: app
                      operator: In
                      values:
                        - rancher
                topologyKey: kubernetes.io/hostname
      containers:
        - image: rancher/rancher:v2.4.6
          imagePullPolicy: IfNotPresent
          name: rancher
          ports:
            - containerPort: 80
              protocol: TCP
          args:
            # Public trusted CA - clear ca certs
            - "--http-listen-port=80"
            - "--https-listen-port=443"
            - "--add-local=auto"
          livenessProbe:
            httpGet:
              path: /healthz
              port: 80
            initialDelaySeconds: 60
            periodSeconds: 30
          readinessProbe:
            httpGet:
              path: /healthz
              port: 80
            initialDelaySeconds: 5
            periodSeconds: 30
          resources:
            {}
          volumeMounts:
            - mountPath: /var/log/auditlog
              name: audit-log
        # Make audit logs available for Rancher log collector tools.
        - image: busybox
          name: rancher-audit-log
          command: ["tail"]
          args: ["-F", "/var/log/auditlog/rancher-api-audit.log"]
          volumeMounts:
            - mountPath: /var/log/auditlog
              name: audit-log
      volumes:
        - name: audit-log
          emptyDir: {}
