rancher/base/ingress.yaml
---
# Source: rancher/templates/ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: rancher
  labels:
    app: rancher
    chart: rancher-2.4.6
    heritage: Helm
    release: rancher
  annotations:
    nginx.ingress.kubernetes.io/proxy-connect-timeout: "30"
    nginx.ingress.kubernetes.io/proxy-read-timeout: "1800"
    nginx.ingress.kubernetes.io/proxy-send-timeout: "1800"
spec:
  rules:
  - host: rancher.192.168.0.15.xip.io  # hostname to access rancher server
    http:
      paths:
      - backend:
          serviceName: rancher
          servicePort: 80
  tls:
  - hosts:
    - rancher.192.168.0.15.xip.io
    secretName: tls-rancher-ingress
---
---
apiVersion: traefik.containo.us/v1alpha1
kind: Middleware
metadata:
  name: redirect-https-rancher
spec:
  redirectScheme:
    scheme: https
    permanent: true
---
apiVersion: traefik.containo.us/v1alpha1
kind: IngressRoute
metadata:
  name: rancher
spec:
  entryPoints:
    - web
  routes:
    - match: Host(`rancher.192.168.0.15.xip.io`)
      kind: Rule
      services:
        - name: rancher
          port: 80
      middlewares:
        - name: redirect-https-rancher

---
apiVersion: traefik.containo.us/v1alpha1
kind: IngressRoute
metadata:
  name: rancher-tls
spec:
  entryPoints:
    - websecure
  routes:
    - match: Host(`rancher.192.168.0.15.xip.io`)
      kind: Rule
      services:
        - name: rancher
          port: 80
  tls:
    secretName: tls-rancher-ingress
